// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Kusama Preimage > Kusama Preimage > preimage tests > preimage empty test > note empty preimage events 1`] = `
[
  {
    "data": {
      "hash_": "(hash)",
    },
    "method": "Noted",
    "section": "preimage",
  },
]
`;

exports[`Kusama Preimage > Kusama Preimage > preimage tests > preimage empty test > unnote empty preimage events 1`] = `
[
  {
    "data": {
      "hash_": "(hash)",
    },
    "method": "Cleared",
    "section": "preimage",
  },
]
`;

exports[`Kusama Preimage > Kusama Preimage > preimage tests > preimage ensure updated test (fees due) > ensure updated preimage events 1`] = `[]`;

exports[`Kusama Preimage > Kusama Preimage > preimage tests > preimage ensure updated test (no fees due) > ensure updated preimage events 1`] = `[]`;

exports[`Kusama Preimage > Kusama Preimage > preimage tests > preimage single note and unnote test > note preimage events 1`] = `
[
  {
    "data": {
      "hash_": "(hash)",
    },
    "method": "Noted",
    "section": "preimage",
  },
]
`;

exports[`Kusama Preimage > Kusama Preimage > preimage tests > preimage single note and unnote test > unnote preimage events 1`] = `
[
  {
    "data": {
      "hash_": "(hash)",
    },
    "method": "Cleared",
    "section": "preimage",
  },
]
`;

exports[`Kusama Preimage > failure tests > preimage repeated note and unnote test > note preimage events 1`] = `
[
  {
    "data": {
      "hash_": "(hash)",
    },
    "method": "Noted",
    "section": "preimage",
  },
]
`;

exports[`Kusama Preimage > failure tests > preimage repeated note and unnote test > repeat note preimage events 1`] = `[]`;

exports[`Kusama Preimage > failure tests > preimage repeated note and unnote test > repeat unnote preimage events 1`] = `[]`;

exports[`Kusama Preimage > failure tests > preimage repeated note and unnote test > unnote preimage events 1`] = `
[
  {
    "data": {
      "hash_": "(hash)",
    },
    "method": "Cleared",
    "section": "preimage",
  },
]
`;

exports[`Kusama Preimage > failure tests > preimage single request and unrequest test as non-root > request preimage events 1`] = `[]`;

exports[`Kusama Preimage > failure tests > preimage single request and unrequest test as non-root > unrequest preimage events 1`] = `[]`;
